Se agregó hover a footer y se redujeron los tamaños de los iframe en "Actualizaciones". Además, se corrigieron tabulaciones.

--- a/pages/actualizaciones.html
+++ b/pages/actualizaciones.html
@@ -64,7 +64,7 @@
             <p>¡Hollow Knight: Godmaster es el último capítulo en la historia del Caballero y el paquete de contenido más grande todos por mucho! Conoce nuevos personajes, acepta nuevas misiones, descubre nuevos secretos, y por sobre todo, ¡prepárate para una increíble batalla para tomar tu lugar de una vez por todas entre los dioses de Hallownest!
             </p>
 
-            <div class="ratio ratio-16x9 position-relative">
+            <div class="ratio ratio-16x9 position-relative" id="godmaster-sample">
                 <iframe class="position-absolute top-50 start-50 translate-middle" width="560" height="315" src="https://www.youtube.com/embed/UBxtfDAtVTY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>            
         </section>
@@ -74,7 +74,7 @@
 
             <p>Hollow Knight: Lifeblood consiste en pequeños cambios como mejoras de optimización, efectos de voces y sonido adicionales, varios ajustes de balance, entre otros. Además, se han agregado nuevos contenidos tales como un nuevo jefe con nueva música y marcadores de mapa personalizados. </p>
 
-            <div class="ratio ratio-4x3 position-relative">
+            <div class="ratio ratio-4x3 position-relative" id="lifeblood-sample">
                 <img class="position-absolute top-50 start-50 translate-middle" width="560" src="../source/img/4aca90ef4bb59a48c5b99a047ccf54cf29a063e0.jpg" alt="">
             </div>
         </section>
@@ -85,7 +85,7 @@
             <p>Enciende el Faro de las Pesadillas y participa en un siniestro ritual. ¡Enfréntate a terroríficos nuevos enemigos y consigue nuevos y poderosos amigos! Y, por supuesto, ¡también hay algunas pequeñas sorpresas extra!            
             </p>
 
-            <div class="ratio ratio-16x9 position-relative">
+            <div class="ratio ratio-16x9 position-relative" id="grimm-troupe-sample">
                 <iframe class="position-absolute top-50 start-50 translate-middle" width="560" height="315" src="https://www.youtube.com/embed/b1imD1_uu0w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
@@ -95,7 +95,7 @@
 
             <p>¡Es hora de enfrentar a dos de los más grandes guerreros de Hallownest; revelar una antigua estación oculta y atravesar Hallownest de una manera completamente nueva con los portales oníricos! Incluso hemos incluido algunas pequeñas sorpresas para mantener alerta a los jugadores veteranos.</p>
 
-            <div class="ratio ratio-16x9 position-relative">
+            <div class="ratio ratio-16x9 position-relative" id="hidden-dreams-sample">
                 <iframe class="position-absolute top-50 start-50 translate-middle" width="560" height="315" src="https://www.youtube.com/embed/7Q-HWedUolo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
@@ -107,15 +107,15 @@
         <section id="carousel">
             <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="../source/img/banner_hidden_dreams.png" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../source/img/banner_grimm.png" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../source/img/banner_pics_0003_3.jpg" class="d-block w-100" alt="...">
-                  </div>
+                    <div class="carousel-item active">
+                        <img src="../source/img/banner_hidden_dreams.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../source/img/banner_grimm.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../source/img/banner_pics_0003_3.jpg" class="d-block w-100" alt="...">
+                    </div>
                 </div>
               </div>
         </section>
@@ -127,10 +127,18 @@
 
     <footer>
         <ul>
-            <li><a target="_blank" href="https://www.facebook.com/teamcherrygames/">Facebook</a></li>
-            <li><a target="_blank" href="https://twitter.com/TeamCherryGames">Twitter</a></li>
-            <li><a target="_blank" href="https://www.youtube.com/teamcherrygames">YouTube</a></li>
-            <li><a target="_blank" href="https://store.steampowered.com/app/367520/Hollow_Knight/">Steam</a></li>
+            <li>
+                <a target="_blank" href="https://www.facebook.com/teamcherrygames/">Facebook</a>
+            </li>
+            <li>
+                <a target="_blank" href="https://twitter.com/TeamCherryGames">Twitter</a>
+            </li>
+            <li>
+                <a target="_blank" href="https://www.youtube.com/teamcherrygames">YouTube</a>
+            </li>
+            <li>
+                <a target="_blank" href="https://store.steampowered.com/app/367520/Hollow_Knight/">Steam</a>
+            </li>
         </ul>
     </footer>
 
