--- a/pages/amuletos.html
+++ b/pages/amuletos.html
@@ -74,10 +74,10 @@
             <div id="tabla">
                 <div class="grid-row-head">
                      <div class="columna-nombre">
-                         <p class="text-center">Nombre</p>
+                            <p class="text-center">Nombre</p>
                      </div>
                      <div class="columna-descrip">
-                         <p class="text-center">Descripción</p>
+                            <p class="text-center">Descripción</p>
                      </div>
                 </div>
  
@@ -141,10 +141,18 @@
     <footer>
         <!-- Redes sociales -->
         <ul>
-            <li><a target="_blank" href="https://www.facebook.com/teamcherrygames/">Facebook</a></li>
-            <li><a target="_blank" href="https://twitter.com/TeamCherryGames">Twitter</a></li>
-            <li><a target="_blank" href="https://www.youtube.com/teamcherrygames">YouTube</a></li>
-            <li><a target="_blank" href="https://store.steampowered.com/app/367520/Hollow_Knight/">Steam</a></li>
+            <li>
+                <a target="_blank" href="https://www.facebook.com/teamcherrygames/">Facebook</a>
+            </li>
+            <li>
+                <a target="_blank" href="https://twitter.com/TeamCherryGames">Twitter</a>
+            </li>
+            <li>
+                <a target="_blank" href="https://www.youtube.com/teamcherrygames">YouTube</a>
+            </li>
+            <li>
+                <a target="_blank" href="https://store.steampowered.com/app/367520/Hollow_Knight/">Steam</a>
+            </li>
         </ul>
     </footer>
 </body>
