Agregados alt en img de "Actualizaciones" y corregido rendimiento responsive

--- a/pages/actualizaciones.html
+++ b/pages/actualizaciones.html
@@ -40,6 +40,21 @@
                 </li>
                 <li>
                     <a href="actualizaciones.html">Actualizaciones</a>
+                    
+                    <ul>
+                        <li class="py-4">
+                            <a href="actualizaciones.html#godmaster">Godmaster</a>
+                        </li>
+                        <li class="py-4">
+                            <a href="actualizaciones.html#grimm-troupe">The Grimm Troupe</a>
+                        </li>
+                        <li class="py-4">
+                            <a href="actualizaciones.html#lifeblood">Lifeblood</a>
+                        </li>
+                        <li class="py-4">
+                            <a href="actualizaciones.html#hidden-dreams">Hidden Dreams</a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a href="team-cherry.html">Team Cherry</a>
@@ -75,7 +90,7 @@
             <p>Hollow Knight: Lifeblood consiste en pequeños cambios como mejoras de optimización, efectos de voces y sonido adicionales, varios ajustes de balance, entre otros. Además, se han agregado nuevos contenidos tales como un nuevo jefe con nueva música y marcadores de mapa personalizados. </p>
 
             <div class="ratio ratio-4x3 position-relative" id="lifeblood-sample">
-                <img class="position-absolute top-50 start-50 translate-middle" width="560" src="../source/img/4aca90ef4bb59a48c5b99a047ccf54cf29a063e0.jpg" alt="">
+                <img class="position-absolute top-50 start-50 translate-middle" width="560" src="../source/img/4aca90ef4bb59a48c5b99a047ccf54cf29a063e0.jpg" alt="lifeblood-update">
             </div>
         </section>
 
@@ -104,17 +119,17 @@
             <img src="../source/img/fleur_divider.png" alt="">
         </div>
 
-        <section id="carousel">
-            <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <section id="carousel" class="container-fluid">
+            <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade col-lg-8 mx-auto" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../source/img/banner_hidden_dreams.png" class="d-block w-100" alt="...">
+                        <img src="../source/img/banner_pics_0003_3.jpg" class="d-block w-100" alt="hollow-knight-banner-1">
                     </div>
                     <div class="carousel-item">
-                        <img src="../source/img/banner_grimm.png" class="d-block w-100" alt="...">
+                        <img src="../source/img/banner_grimm.png" class="d-block w-100" alt="hollow-knight-banner-2">
                     </div>
                     <div class="carousel-item">
-                        <img src="../source/img/banner_pics_0003_3.jpg" class="d-block w-100" alt="...">
+                        <img src="../source/img/banner_hidden_dreams.png" class="d-block w-100" alt="hollow-knight-banner-3">
                     </div>
                 </div>
               </div>
