--- a/pages/actualizaciones.html
+++ b/pages/actualizaciones.html
@@ -23,6 +23,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+    <!-- Íconos Fontawesome -->
+    <script src="https://kit.fontawesome.com/ea4408f4ad.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -143,16 +146,16 @@
     <footer>
         <ul>
             <li>
-                <a target="_blank" href="https://www.facebook.com/teamcherrygames/">Facebook</a>
+                <a target="_blank" href="https://www.facebook.com/teamcherrygames/"><i class="fab fa-facebook"></i></a>
             </li>
             <li>
-                <a target="_blank" href="https://twitter.com/TeamCherryGames">Twitter</a>
+                <a target="_blank" href="https://twitter.com/TeamCherryGames"><i class="fab fa-twitter"></i></a>
             </li>
             <li>
-                <a target="_blank" href="https://www.youtube.com/teamcherrygames">YouTube</a>
+                <a target="_blank" href="https://www.youtube.com/teamcherrygames"><i class="fab fa-youtube"></i></a>
             </li>
             <li>
-                <a target="_blank" href="https://store.steampowered.com/app/367520/Hollow_Knight/">Steam</a>
+                <a target="_blank" href="https://store.steampowered.com/app/367520/Hollow_Knight/"><i class="fab fa-steam"></i></a>
             </li>
         </ul>
     </footer>
