Se agregó favicon a todas las páginas

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="keywords" content="hollow knight, hollow, knight">
     <title>Hollow Knight</title>
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="source/img/hollow-knight-icon.png" type="image/x-icon">
+
     <!-- CSS Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.css">
     
