--- a/pages/actualizaciones.html
+++ b/pages/actualizaciones.html
@@ -10,6 +10,9 @@
     
     <title>Actualizaciones - Hollow Knight</title>
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="../source/img/hollow-knight-icon.png" type="image/x-icon">
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="../css/bootstrap/bootstrap.css">
 
