--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -9,6 +9,9 @@
     <meta name="keywords" content="hollow knight personajes, hollow, knight, personajes">
     <title>Personajes - Hollow Knight</title>
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="../source/img/hollow-knight-icon.png" type="image/x-icon">
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="../css/bootstrap/bootstrap.css">
     
