--- a/pages/amuletos.html
+++ b/pages/amuletos.html
@@ -9,6 +9,9 @@
     <meta name="keywords" content="hollow knight amuletos, hollow, knight, amuletos">
     <title>Amuletos - Hollow knight</title>
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="../source/img/hollow-knight-icon.png" type="image/x-icon">
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="../css/bootstrap/bootstrap.css">
     
