Mejorada optimización responsive en "Personajes" y "Amuletos", arreglado efecto hover en íconos de footer

--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -77,8 +77,8 @@
         </div>
 
         <section>
-            <div id="tabla">
-                <div class="grid-row-head">
+            <div class="tabla">
+                <div class="grid-row-head d-none d-sm-flex">
                     <div class="columna-nombre">
                         <p class="text-center">Nombre</p>
                     </div>
@@ -89,7 +89,7 @@
  
                 <div class="grid-row">
                     <div class="columna-nombre">
-                        <img width="100%" src="../source/img/Cornifer.png" alt="cornifer">
+                        <img src="../source/img/Cornifer-fixed.png" alt="Cornifer">
                         <p>Cornifer</p>
                     </div>
                     <div class="columna-descrip">
@@ -99,7 +99,7 @@
  
                 <div class="grid-row">
                     <div class="columna-nombre">
-                        <img width="80%" src="../source/img/Cloth.png" alt="cloth">
+                        <img src="../source/img/Cloth-fixed.png" alt="cloth">
                         <p>Cloth</p>
                     </div>
                     <div class="columna-descrip">
@@ -109,7 +109,7 @@
  
                 <div class="grid-row">
                     <div class="columna-nombre">
-                        <img height="70%" src="../source/img/Quirrel2.png" alt="quirrel">
+                        <img src="../source/img/Quirrel-fixed.png" alt="quirrel">
                         <p>Quirrel</p>
                     </div>
                     <div class="columna-descrip">
@@ -119,7 +119,7 @@
 
                 <div class="grid-row">
                     <div class="columna-nombre">
-                        <img height="80%" src="../source/img/Tiso.png" alt="tiso">
+                        <img src="../source/img/Tiso-fixed.png" alt="tiso">
                         <p>Tiso</p>
                     </div>
                     <div class="columna-descrip">
@@ -130,7 +130,7 @@
 
                 <div class="grid-row">
                     <div class="columna-nombre">
-                        <img height="80%" src="../source/img/Zote_Idle.png" alt="zote">
+                        <img src="../source/img/Zote-fixed.png" alt="zote">
                         <p>Zote</p>
                     </div>
                     <div class="columna-descrip">
@@ -140,11 +140,11 @@
 
                 <div class="grid-row">
                     <div class="columna-nombre">
-                        <img height="80%" src="../source/img/Hornet_Idle.png" alt="hornet">
+                        <img src="../source/img/Hornet-fixed.png" alt="hornet">
                         <p>Hornet</p>
                     </div>
                     <div class="columna-descrip">
-                        <p>Habilidosa protectora de las ruinas de Hallownest. Empuña hábilmente una filosa aguja e hilo.</p>
+                        <p>Misteriosa protectora de las ruinas de Hallownest. Empuña con gran habilidad una filosa aguja e hilo.</p>
                     </div>
                 </div>
             </div>
