--- a/pages/amuletos.html
+++ b/pages/amuletos.html
@@ -77,7 +77,7 @@
         </div>
 
         <section>
-            <div id="tabla">
+            <div class="tabla">
                 <div class="grid-row-head">
                      <div class="columna-nombre">
                             <p class="text-center">Nombre</p>
@@ -89,7 +89,7 @@
  
                 <div class="grid-row-charm">
                     <div class="columna-nombre">
-                        <img width="25%" src="../source/img/Wayward_Compass.png" alt="brujula-caprichosa">
+                        <img src="../source/img/Wayward_Compass.png" alt="brujula-caprichosa">
                         <p>Brújula Caprichosa</p>
                     </div>
                     <div class="columna-descrip">
@@ -99,7 +99,7 @@
  
                 <div class="grid-row-charm">
                     <div class="columna-nombre">
-                        <img width="25%" src="../source/img/Gathering_Swarm.png" alt="enjambre-recolector">
+                        <img src="../source/img/Gathering_Swarm.png" alt="enjambre-recolector">
                         <p>Enjambre Recolector</p>
                     </div>
                     <div class="columna-descrip">
@@ -109,7 +109,7 @@
  
                 <div class="grid-row-charm">
                     <div class="columna-nombre">
-                        <img width="25%" src="../source/img/Stalwart_Shell.png" alt="coraza-robusta">
+                        <img src="../source/img/Stalwart_Shell.png" alt="coraza-robusta">
                         <p>Coraza Robusta</p>
                     </div>
                     <div class="columna-descrip">
@@ -119,7 +119,7 @@
  
                 <div class="grid-row-charm">
                     <div class="columna-nombre">
-                        <img width="25%" src="../source/img/Soul_Catcher.png" alt="atrapaalmas">
+                        <img src="../source/img/Soul_Catcher.png" alt="atrapaalmas">
                         <p>Atrapaalmas</p>
                     </div>
                     <div class="columna-descrip">
@@ -129,7 +129,7 @@
 
                 <div class="grid-row-charm">
                     <div class="columna-nombre">
-                        <img width="25%" src="../source/img/Shaman_Stone.png" alt="piedra-chaman">
+                        <img src="../source/img/Shaman_Stone.png" alt="piedra-chaman">
                         <p>Piedra de Chamán</p>
                     </div>
                     <div class="columna-descrip">
