Se corrigieron algunos márgenes en general, se cambió alineación de los textos en Actualizaciones

--- a/pages/actualizaciones.html
+++ b/pages/actualizaciones.html
@@ -76,9 +76,11 @@
             <img src="../source/img/fleur_divider.png" alt="">
         </div>
 
-        <section class="elemento-actualizacion">        
-        
-            <p class="text-center h6">¡Hollow Knight se expande con 4 grandes actualizaciones de contenido gratis! Brindando de esta manera nuevos secretos, personajes y desafíos.</p>
+        <div id="subtitle-actualizaciones" class="my-3">
+            <p>¡Hollow Knight se expande con 4 grandes actualizaciones de contenido gratis! Brindando de esta manera nuevos secretos, personajes y desafíos.</p>
+        </div>
+
+        <section class="elemento-actualizacion">
 
             <h2 id="godmaster">Godmaster</h2>
 
